# scratchNN

./: .gitignore  CMakeLists.txt  README.md
